--- a/style.css
+++ b/style.css
@@ -366,11 +366,165 @@
 }
 
 /* Tablet */
-/* Desktop */
-@media (min-width: 1080px) {
-  /* header */
+@media (min-width: 768px) {
   .header-top-wraper .header-top {
     height: 59px;
+    width: 768px;
+  }
+  .header-top-wraper .header-top .contacts {
+    width: 660px;
+  }
+  .header-top-wraper .header-top .contacts p {
+    display: inline;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px;
+  }
+  .header-top-wraper .header-top .contact-item {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .header-top-wraper .header-top .contact-item span {
+    margin-right: 10px;
+  }
+  .header-bottom {
+    width: 768px;
+  }
+  .header-bottom .logo {
+    height: 55px;
+    content: url(img/logo-main.png);
+  }
+  .header-bottom .menu-wraper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+  }
+  .header-bottom .call-back-wraper {
+    width: 140px;
+    height: 35px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .header-bottom .call-back-wraper .call-back {
+    height: 20px;
+    width: 20px;
+  }
+  .header-bottom .call-back-wraper p {
+    display: inline;
+    color: white;
+    margin-left: 10px;
+  }
+  /* hero section */
+  .hero-wraper .mobile-hero-img {
+    content: url(img/hero-img-desc.jpg);
+    width: 768px;
+  }
+  .hero-wraper .mobile-hero-img img {
+    display: none;
+  }
+  .container {
+    width: 768px;
+  }
+  .container .content-wraper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .container .plant-bg {
+    bottom: 40px;
+  }
+  .container .hero-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .container .hero-text .planting-text {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
+    margin-bottom: 10px;
+  }
+  .container .hero-text .title {
+    font-size: 38px;
+    font-weight: 800;
+    line-height: 51px;
+    margin-bottom: 10px;
+  }
+  .container .hero-text .text {
+    color: #676767;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    width: 500px;
+  }
+  .container .btn-wraper {
+    margin: 50px 0;
+    flex-direction: row;
+    justify-content: normal;
+    align-items: normal;
+  }
+  .container .btn-wraper .btn {
+    margin-bottom: 0;
+    margin-right: 30px;
+    width: 175px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+  }
+  .container .btn-wraper .info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container .btn-wraper .info a {
+    color: #676767;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 30px;
+  }
+  .container .btn-wraper .info span {
+    content: url(img/icon/arrow-btn-desc.svg);
+  }
+  .container .customer-info {
+    justify-content: normal;
+    gap: 10px;
+    margin-bottom: 100px;
+  }
+  .container .customer-info .customer-item {
+    width: 149px;
+    height: 50px;
+    padding: 0;
+    border-radius: 0;
+    background: none;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 20px;
+    color: #212529;
+  }
+  .container .customer-info .customer-item:last-child {
+    display: flex;
+  }
+  .container .customer-info .customer-item span {
+    display: block;
+    padding: 15px 7px 15px 7px;
+    border-radius: 35px;
+    margin-right: 10px;
+    font-size: 15px;
+    line-height: 20px;
+    background: linear-gradient(72.71deg, #00730C -83.5%, #F9F9F9 93.84%);
+  }
+}
+/* Laptop */
+@media (min-width: 1440px) {
+  /* header */
+  .header-top-wraper .header-top {
     width: 1420px;
   }
   .header-top-wraper .header-top .contacts {
@@ -440,43 +594,29 @@
   .header-bottom .call-back-wraper {
     width: 170px;
     height: 50px;
-    border-radius: 5px;
-    background-color: #00730C;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    padding: 10px, 35px, 10px, 35px;
   }
   .header-bottom .call-back-wraper .call-back {
     height: 30px;
     width: 30px;
-  }
-  .header-bottom .call-back-wraper p {
-    display: inline;
-    color: white;
-    margin-left: 10px;
   }
   /* hero section */
   .hero-wraper {
     flex-direction: row-reverse;
     align-items: normal;
     position: relative;
-    height: 719px;
+    height: 643px;
   }
   .hero-wraper .mobile-hero-img {
-    content: url(img/hero-img-desc.jpg);
+    width: 900px;
     position: absolute;
     bottom: 0;
     right: 0;
-  }
-  .hero-wraper .mobile-hero-img img {
-    display: none;
   }
   .container {
     width: 1410px;
   }
   .container .content-wraper {
+    display: block;
     width: 570px;
     margin: 0;
   }
@@ -490,7 +630,8 @@
     left: -250px;
   }
   .container .hero-text {
-    margin-top: 166px;
+    display: block;
+    margin-top: 100px;
   }
   .container .hero-text .planting-text {
     font-size: 16px;
@@ -633,5 +774,18 @@
     font-weight: 400;
     line-height: 28px;
     text-align: center;
+  }
+}
+/* Desktop */
+@media (min-width: 1750px) {
+  /* hero section */
+  .hero-wraper {
+    height: 719px;
+  }
+  .hero-wraper .mobile-hero-img {
+    width: auto;
+  }
+  .container .hero-text {
+    margin-top: 166px;
   }
 }/*# sourceMappingURL=style.css.map */
