--- a/style.css
+++ b/style.css
@@ -365,6 +365,119 @@
   color: #676767;
 }
 
+/* exp section */
+.exp-wraper {
+  margin: 50px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.exp-wraper .container {
+  width: 375px;
+}
+.exp-wraper .container .img-block-desk {
+  display: none;
+}
+.exp-wraper .container .img-block {
+  position: relative;
+  height: 462px;
+  width: 100%;
+}
+.exp-wraper .container .img-block img:nth-child(2) {
+  position: absolute;
+  z-index: 10;
+  top: 12px;
+  left: 12px;
+}
+.exp-wraper .container .img-block img:nth-child(3) {
+  position: absolute;
+  z-index: 11;
+  top: 300px;
+  left: 103px;
+}
+.exp-wraper .container .bg-block {
+  width: 188px;
+  height: 293px;
+  background-color: #00730C;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.exp-wraper .container .title {
+  margin-top: 30px;
+}
+.exp-wraper .container .title h2 {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 38px;
+  margin-bottom: 15px;
+}
+.exp-wraper .container .title h2 span {
+  color: #00730C;
+}
+.exp-wraper .container .title p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  margin-bottom: 40px;
+  color: #676767;
+}
+.exp-wraper .container .cards-wraper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+.exp-wraper .container .cards-wraper .cards-item {
+  width: calc(50% - 10px);
+  height: 94px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 2px 11px 30px 0px rgba(51, 51, 51, 0.0784313725);
+  background-color: white;
+}
+.exp-wraper .container .cards-wraper .cards-item .icon {
+  width: 49px;
+  height: 40px;
+}
+.exp-wraper .container .cards-wraper .cards-item:first-child .icon {
+  content: url(img/icon/mission.svg);
+}
+.exp-wraper .container .cards-wraper .cards-item:last-child .icon {
+  content: url(img/icon/trust.svg);
+}
+.exp-wraper .container .cards-wraper .cards-item:nth-child(2) .icon {
+  content: url(img/icon/vision.svg);
+}
+.exp-wraper .container .cards-wraper .cards-item:nth-child(3) .icon {
+  content: url(img/icon/support.svg);
+}
+.exp-wraper .container .cards-wraper .cards-item p {
+  margin-top: 5px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 19px;
+}
+.exp-wraper .container .discover-more-btn {
+  width: 167px;
+  height: 40px;
+  display: block;
+  margin: 0 auto;
+  color: white;
+  background-color: #00730C;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  border: none;
+  cursor: pointer;
+}
+
 /* Tablet */
 @media (min-width: 768px) {
   .header-top-wraper .header-top {
@@ -519,6 +632,28 @@
     font-size: 15px;
     line-height: 20px;
     background: linear-gradient(72.71deg, #00730C -83.5%, #F9F9F9 93.84%);
+  }
+  .exp-wraper .container {
+    width: 768px;
+  }
+  .exp-wraper .container .tablet-wraper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+  }
+  .exp-wraper .container .img-block {
+    width: 50%;
+  }
+  .exp-wraper .container .title {
+    width: 50%;
+    margin-top: 0;
+  }
+  .exp-wraper .container .title p {
+    margin-bottom: 0;
+  }
+  .exp-wraper .container .cards-wraper {
+    width: 100%;
   }
 }
 /* Laptop */
@@ -775,6 +910,105 @@
     line-height: 28px;
     text-align: center;
   }
+  .exp-wraper {
+    margin: 0;
+    position: relative;
+  }
+  .exp-wraper .container {
+    width: 1410px;
+  }
+  .exp-wraper .container .content-wraper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+  }
+  .exp-wraper .container .desk-wraper {
+    width: calc(100% - 720px);
+  }
+  .exp-wraper .container .tablet-wraper {
+    margin-bottom: 0;
+  }
+  .exp-wraper .container .img-block {
+    display: none;
+  }
+  .exp-wraper .container .img-block-desk {
+    display: block;
+    position: relative;
+    height: 903px;
+    width: 693px;
+  }
+  .exp-wraper .container .img-block-desk img:nth-child(2) {
+    position: absolute;
+    z-index: 10;
+    top: 36px;
+    left: 24px;
+  }
+  .exp-wraper .container .img-block-desk img:nth-child(3) {
+    position: absolute;
+    z-index: 11;
+    top: 597px;
+    left: 237px;
+  }
+  .exp-wraper .container .bg-block {
+    width: 450px;
+    height: 706px;
+    background-color: #00730C;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .exp-wraper .container .title {
+    width: 100%;
+    padding-right: 55px;
+    margin-bottom: 50px;
+  }
+  .exp-wraper .container .title h2 {
+    font-size: 45px;
+    font-weight: 800;
+    line-height: 61px;
+    margin-bottom: 30px;
+  }
+  .exp-wraper .container .title p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+  }
+  .exp-wraper .container .title p span {
+    display: block;
+    margin-bottom: 30px;
+  }
+  .exp-wraper .container .cards-wraper {
+    gap: 30px;
+    margin-bottom: 50px;
+  }
+  .exp-wraper .container .cards-wraper .cards-item {
+    width: calc(50% - 15px);
+    height: 97px;
+    box-shadow: none;
+    flex-direction: row;
+    padding-left: 30px;
+    justify-content: normal;
+  }
+  .exp-wraper .container .cards-wraper .cards-item .icon {
+    width: 77px;
+    height: 67px;
+    margin-right: 30px;
+  }
+  .exp-wraper .container .cards-wraper .cards-item p {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+  }
+  .exp-wraper .container .discover-more-btn {
+    width: 190px;
+    height: 50px;
+    margin: 0;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+  }
 }
 /* Desktop */
 @media (min-width: 1750px) {
@@ -787,5 +1021,11 @@
   }
   .container .hero-text {
     margin-top: 166px;
+  }
+  .exp-wraper .bg-img {
+    content: url(img/exp-bg-Img.png);
+    position: absolute;
+    top: 0;
+    left: -160px;
   }
 }/*# sourceMappingURL=style.css.map */
