--- a/style.scss
+++ b/style.scss
@@ -353,6 +353,112 @@
     }
 }
 
+/* exp section */
+
+.exp-wraper {
+    margin: 50px 0;
+    @include flex-center;
+    .container {
+        width: 375px;
+        .img-block-desk {
+            display: none;
+        }
+        .img-block {
+            position: relative;
+            height: 462px;
+            width: 100%;
+            img:nth-child(2) {
+                position: absolute;
+                z-index: 10;
+                top: 12px;
+                left: 12px;
+            }
+            img:nth-child(3) {
+                position: absolute;
+                z-index: 11;
+                top: 300px;
+                left: 103px;
+            }
+        }
+        .bg-block {
+            width: 188px;
+            height: 293px;
+            background-color: $second-color;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        .title {
+            margin-top: 30px;
+            h2 {
+                font-size: 28px;
+                font-weight: 700;
+                line-height: 38px;
+                margin-bottom: 15px;
+                span {
+                    color: $second-color;
+                }
+            }
+            p {
+                @include regular-font;
+                margin-bottom: 40px;
+                color: $text-color;
+            }
+        }
+        .cards-wraper {
+            @include flex-space-between;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-bottom: 30px;
+            .cards-item {
+                width: calc(50% - 10px);
+                height: 94px;
+                cursor: pointer;
+                @include flex-center;
+                flex-direction: column;
+                box-shadow: 2px 11px 30px 0px #33333314;
+                background-color: white;
+                .icon {
+                    width: 49px;
+                    height: 40px;
+                }
+                &:first-child .icon{
+                    content: url(img/icon/mission.svg);
+                }
+                &:last-child .icon{
+                    content: url(img/icon/trust.svg);
+                }
+                &:nth-child(2) .icon{
+                    content: url(img/icon/vision.svg);
+                }
+                &:nth-child(3) .icon{
+                    content: url(img/icon/support.svg);
+                }
+                p {
+                    margin-top: 5px;
+                    font-size: 14px;
+                    font-weight: 700;
+                    line-height: 19px;
+                }
+            }
+        }
+        .discover-more-btn {
+            width: 167px;
+            height: 40px;
+            display: block;
+            margin: 0 auto;
+            color: white;
+            background-color: $second-color;
+            border-radius: 5px;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 20px;
+            border: none;
+            cursor: pointer;
+        }
+    }
+}
+
 /* Tablet */
 
 @media (min-width: 768px) {
@@ -500,6 +606,30 @@
                     line-height: 20px;
                     background: linear-gradient(72.71deg, #00730C -83.5%, #F9F9F9 93.84%);
                 }
+            }
+        }
+    }
+    // exp section
+    
+    .exp-wraper {
+        .container {
+            width: 768px;
+            .tablet-wraper {
+                @include flex-space-between;
+                margin-bottom: 40px;
+            }
+            .img-block {
+                width: 50%;
+            }
+            .title {
+                width: 50%;
+                margin-top: 0;
+                p {
+                    margin-bottom: 0;
+                }
+            }
+            .cards-wraper {
+                width: 100%;
             }
         }
     }
@@ -752,6 +882,106 @@
             }
         }
     }
+
+    // exp section
+
+    .exp-wraper {
+        margin: 0;
+        position: relative;
+        .container {
+            width: 1410px;
+            .content-wraper {
+                @include flex-space-between;
+                flex-direction: row;
+                width: 100%;
+            }
+            .desk-wraper {
+                width: calc(100% - 720px);
+            }
+            .tablet-wraper {
+                margin-bottom: 0;
+            }
+            .img-block {
+                display: none;
+            }
+            .img-block-desk {
+                display: block;
+                position: relative;
+                height: 903px;
+                width: 693px;
+                img:nth-child(2) {
+                    position: absolute;
+                    z-index: 10;
+                    top: 36px;
+                    left: 24px;
+                }
+                img:nth-child(3) {
+                    position: absolute;
+                    z-index: 11;
+                    top: 597px;
+                    left: 237px;
+                }
+            }
+            .bg-block {
+                width: 450px;
+                height: 706px;
+                background-color: $second-color;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+            .title {
+                width: 100%;
+                padding-right: 55px;
+                margin-bottom: 50px;
+                h2 {
+                    font-size: 45px;
+                    font-weight: 800;
+                    line-height: 61px;
+                    margin-bottom: 30px;
+                }
+                p {
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 28px;
+                    span {
+                        display: block;
+                        margin-bottom: 30px;
+                    }
+                }
+            }
+            .cards-wraper {
+                gap: 30px;
+                margin-bottom: 50px;
+                .cards-item {
+                    width: calc(50% - 15px);
+                    height: 97px;
+                    box-shadow: none;
+                    flex-direction: row;
+                    padding-left: 30px;
+                    justify-content: normal;
+                    .icon {
+                        width: 77px;
+                        height: 67px;
+                        margin-right: 30px;
+                    }
+                    p {
+                        font-size: 24px;
+                        font-weight: 700;
+                        line-height: 32px;
+                    }
+                }
+            }
+            .discover-more-btn {
+                width: 190px;
+                height: 50px;
+                margin: 0;
+                font-size: 18px;
+                font-weight: 700;
+                line-height: 24px;
+            }
+        }
+    }
     
 }
 
@@ -768,6 +998,16 @@
     .container {
         .hero-text {
             margin-top: 166px;
+        }
+    }
+    // exp section
+
+    .exp-wraper {
+        .bg-img {
+            content: url(img/exp-bg-Img.png);
+            position: absolute;
+            top: 0;
+            left: -160px;
         }
     }
 }    
