--- a/style.css
+++ b/style.css
@@ -522,15 +522,14 @@
   line-height: 22px;
   color: #676767;
 }
-.comment-wraper .container .slider .slick-track {
-  display: flex;
-  gap: 30px;
-}
 .comment-wraper .container .slider .slick-slide {
   height: 431px;
   padding: 20px;
   background-color: white;
   box-shadow: 2px 11px 30px 0px rgba(51, 51, 51, 0.0784313725);
+}
+.comment-wraper .container .slider .slick-list {
+  padding-bottom: 40px;
 }
 .comment-wraper .container .slider img {
   margin-bottom: 30px;
@@ -576,6 +575,188 @@
 }
 .comment-wraper .container .slider .comment .rate .star {
   content: url(img/icon/star.svg);
+}
+
+/* article-wraper */
+.article-wraper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 50px;
+}
+.article-wraper .container {
+  width: 375px;
+}
+.article-wraper .container .title {
+  text-align: center;
+  margin-bottom: 40px;
+}
+.article-wraper .container .title h2 {
+  font-size: 28px;
+  line-height: 38px;
+  font-weight: 700;
+}
+.article-wraper .container .title span {
+  color: #00730C;
+}
+.article-wraper .container .title p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #676767;
+  margin-top: 20px;
+}
+.article-wraper .container .slider {
+  position: relative;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-shadow: 2px 11px 30px 0px rgba(51, 51, 51, 0.0784313725);
+}
+.article-wraper .container .slider .bg {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+.article-wraper .container .slider .bg-img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  content: url(img/post-BG.png);
+  width: 117px;
+  height: 116px;
+}
+.article-wraper .container .slider .post-wraper {
+  margin: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.article-wraper .container .slider .post-wraper button {
+  background-color: #D9F1E0;
+  box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.1490196078);
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 30px;
+  color: #00730C;
+  border: none;
+}
+.article-wraper .container .slider .post-wraper .post-title {
+  text-align: start;
+  margin-top: 40px;
+  border-bottom: 1px solid #E3E3E3;
+}
+.article-wraper .container .slider .post-wraper .post-title h4 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 21px;
+  color: #00730C;
+  margin-bottom: 15px;
+}
+.article-wraper .container .slider .post-wraper .post-title p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #676767;
+  margin-bottom: 30px;
+}
+.article-wraper .container .slider .post-wraper .post-footer {
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.article-wraper .container .slider .post-wraper .post-footer p {
+  display: flex;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  color: #676767;
+  height: 24px;
+  align-items: center;
+}
+.article-wraper .container .slider .post-wraper .post-footer p:first-child {
+  text-decoration: underline;
+}
+.article-wraper .container .slider .post-wraper .post-footer p span {
+  content: url(img/icon/Admin.svg);
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
+.article-wraper .container .slider .swiper {
+  width: 100%;
+  height: 100%;
+}
+.article-wraper .container .slider .swiper-slide {
+  text-align: center;
+}
+.article-wraper .container .slider .swiper-slide {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.article-wraper .container .slider .swiper-pagination {
+  display: none;
+}
+.article-wraper .container .slider .swiper-slide:first-child .bg-img, .article-wraper .container .slider .swiper-slide:nth-child(3) .bg-img, .article-wraper .container .slider .swiper-slide:nth-child(5) .bg-img {
+  display: none;
+}
+.article-wraper .container .slider .swiper-slide:first-child .post-title, .article-wraper .container .slider .swiper-slide:nth-child(3) .post-title, .article-wraper .container .slider .swiper-slide:nth-child(5) .post-title {
+  margin-top: 75px;
+}
+.article-wraper .container .slider .swiper-slide:first-child .post-title h4, .article-wraper .container .slider .swiper-slide:nth-child(3) .post-title h4, .article-wraper .container .slider .swiper-slide:nth-child(5) .post-title h4 {
+  color: white;
+  margin-bottom: 40px;
+}
+.article-wraper .container .slider .swiper-slide:first-child .post-title p, .article-wraper .container .slider .swiper-slide:nth-child(3) .post-title p, .article-wraper .container .slider .swiper-slide:nth-child(5) .post-title p {
+  margin-bottom: 60px;
+  color: white;
+}
+.article-wraper .container .slider .swiper-slide:first-child .post-footer p, .article-wraper .container .slider .swiper-slide:nth-child(3) .post-footer p, .article-wraper .container .slider .swiper-slide:nth-child(5) .post-footer p {
+  color: white;
+}
+.article-wraper .container .slider .swiper-slide:first-child .bg, .article-wraper .container .slider .swiper-slide:nth-child(5) .bg {
+  background-image: url(img/slide-1.png);
+  background-size: cover;
+}
+.article-wraper .container .slider .swiper-slide:nth-child(3) .bg {
+  background-image: url(img/slide-3.png);
+  background-size: cover;
+}
+.article-wraper .logos {
+  margin-top: 50px;
+  width: 100%;
+  max-width: 1712px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+}
+.article-wraper .logos div:first-child {
+  content: url(img/logo-1.png);
+}
+.article-wraper .logos div:last-child {
+  content: url(img/logo-3.png);
+}
+.article-wraper .logos div:nth-child(2) {
+  content: url(img/logo-2.png);
+}
+.article-wraper .logos div:nth-child(3) {
+  content: url(img/logo-3.png);
+}
+.article-wraper .logos div:nth-child(4) {
+  content: url(img/logo-1.png);
+}
+.article-wraper .logos div:nth-child(5) {
+  content: url(img/logo-2.png);
+}
+.article-wraper .logos .mobile ~ .logo {
+  display: none;
 }
 
 /* Tablet */
@@ -754,6 +935,42 @@
   }
   .exp-wraper .container .cards-wraper {
     width: 100%;
+  }
+  .comment-wraper .container .slider .slick-track {
+    display: flex;
+    gap: 30px;
+  }
+  .article-wraper .container {
+    width: 768px;
+  }
+  .article-wraper .container .slider {
+    width: 100%;
+  }
+  .article-wraper .container .slider .slick-track {
+    width: 100% !important;
+  }
+  .article-wraper .container .slider .swiper {
+    width: 100% !important;
+    height: 100%;
+  }
+  .article-wraper .container .slider .post-wraper .post-title {
+    margin-top: 45px;
+  }
+  .article-wraper .container .slider .post-wraper .post-title h4 {
+    margin-bottom: 42px;
+  }
+  .article-wraper .container .slider .post-wraper .post-title p {
+    margin-bottom: 45px;
+  }
+  .article-wraper .logos {
+    width: 100%;
+    margin-top: 50px;
+  }
+  .article-wraper .logos .mobile ~ .logo {
+    display: block;
+  }
+  .article-wraper .logos .tablet ~ .logo {
+    display: none;
   }
 }
 /* Laptop */
@@ -1134,7 +1351,6 @@
     color: #676767;
   }
   .comment-wraper .container .slider .slick-track {
-    display: flex;
     gap: 30px;
   }
   .comment-wraper .container .slider .slick-slide {
@@ -1225,6 +1441,90 @@
     content: url(img/icon/star.svg);
     width: 25px;
     height: 25px;
+  }
+  .article-wraper {
+    margin-top: 100px;
+  }
+  .article-wraper .container {
+    width: 1410px;
+  }
+  .article-wraper .container .content-wraper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .article-wraper .container .title {
+    margin-bottom: 0;
+    width: 1136px;
+  }
+  .article-wraper .container .title h2 {
+    font-size: 45px;
+    line-height: 61px;
+    font-weight: 800;
+  }
+  .article-wraper .container .title p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+  }
+  .article-wraper .container .slider {
+    box-shadow: none;
+  }
+  .article-wraper .container .slider .bg-img {
+    width: 201px;
+    height: 199px;
+  }
+  .article-wraper .container .slider .post-wraper {
+    margin: 100px 32px 30px 30px;
+  }
+  .article-wraper .container .slider .post-wraper button {
+    width: 123px;
+    height: 35px;
+  }
+  .article-wraper .container .slider .post-wraper .post-title {
+    margin-top: 30px;
+  }
+  .article-wraper .container .slider .post-wraper .post-title h4 {
+    font-size: 24px;
+    line-height: 32px;
+    margin-bottom: 30px;
+  }
+  .article-wraper .container .slider .post-wraper .post-title p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 25px;
+  }
+  .article-wraper .container .slider .post-wraper .post-footer {
+    margin-top: 30px;
+  }
+  .article-wraper .container .slider .swiper-slide {
+    box-shadow: 2px 11px 30px 0px rgba(51, 51, 51, 0.0784313725);
+    margin: 68px 0;
+  }
+  .article-wraper .container .slider .swiper-slide:first-child .post-title, .article-wraper .container .slider .swiper-slide:nth-child(3) .post-title, .article-wraper .container .slider .swiper-slide:nth-child(5) .post-title {
+    margin-top: 85px;
+  }
+  .article-wraper .container .slider .swiper-slide:first-child .post-title p, .article-wraper .container .slider .swiper-slide:nth-child(3) .post-title p, .article-wraper .container .slider .swiper-slide:nth-child(5) .post-title p {
+    margin-bottom: 80px;
+  }
+  .article-wraper .container .slider .swiper-pagination {
+    display: block;
+  }
+  .article-wraper .container .slider .swiper-pagination .swiper-pagination-bullet {
+    width: 50px;
+    height: 7px;
+    border-radius: 0;
+    background: #00730C;
+  }
+  .article-wraper .logos {
+    width: 100%;
+    margin-top: 100px;
+    justify-content: space-between;
+  }
+  .article-wraper .logos .tablet ~ .logo {
+    display: block;
   }
 }
 /* Desktop */
