added working and choose sectiones

--- a/_mixines.scss
+++ b/_mixines.scss
@@ -16,6 +16,12 @@
     align-items: center;
 }
 
+@mixin flex-start() {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 @mixin flex-space-between() {
     display: flex;
     justify-content: space-between;
